update python code COSI

--- a/code/python/COSI_Fine_Tune.ipynb
+++ b/code/python/COSI_Fine_Tune.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,9 +67,9 @@
     "#READING DATA#\n",
     "##############\n",
     "# COSI Q1 \n",
-    "df_Q1 = pd.read_excel('C:\\\\Users\\\\mcampi\\\\Desktop\\\\Postdoc_Pasteur\\\\Perrine\\\\data\\\\Cosi_Labelled\\\\COSI_LABELS.xlsx', sheet_name=0)\n",
-    "df_Q2 = pd.read_excel('C:\\\\Users\\\\mcampi\\\\Desktop\\\\Postdoc_Pasteur\\\\Perrine\\\\data\\\\Cosi_Labelled\\\\COSI_LABELS.xlsx', sheet_name=1)\n",
-    "df_Q3 = pd.read_excel('C:\\\\Users\\\\mcampi\\\\Desktop\\\\Postdoc_Pasteur\\\\Perrine\\\\data\\\\Cosi_Labelled\\\\COSI_LABELS.xlsx', sheet_name=2)"
+    "df_Q1 = pd.read_excel('./COSI_LABELS.xlsx', sheet_name=0)\n",
+    "df_Q2 = pd.read_excel('./COSI_LABELS.xlsx', sheet_name=1)\n",
+    "df_Q3 = pd.read_excel('./COSI_LABELS.xlsx', sheet_name=2)"
    ]
   },
   {
@@ -1884,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1892,7 +1892,7 @@
     "#READING DATA#\n",
     "##############\n",
     "# COSI Q1 \n",
-    "df_test = pd.read_excel('C:\\\\Users\\\\mcampi\\\\Desktop\\\\Postdoc_Pasteur\\\\Perrine\\\\data\\\\Cosi_Labelled\\\\COSI_LABELS_test.xlsx', sheet_name=0)"
+    "df_test = pd.read_excel('./COSI_LABELS_test.xlsx', sheet_name=0)"
    ]
   },
   {
