--- a/code/python/COSI_Prediction_Labels.ipynb
+++ b/code/python/COSI_Prediction_Labels.ipynb
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
     "#READING DATA#\n",
     "##############\n",
     "# COSI Q1 \n",
-    "df_test_Q1 = pd.read_excel('C:\\\\Users\\\\mcampi\\\\Desktop\\\\Postdoc_Pasteur\\\\Perrine\\\\data\\\\Cosi_Labelled\\\\COSI_LABELS_test.xlsx', sheet_name=0)"
+    "df_test_Q1 = pd.read_excel('./COSI_LABELS_test.xlsx', sheet_name=0)"
    ]
   },
   {
@@ -6423,12 +6423,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Specify the file path where you want to save the Excel file\n",
-    "excel_file_path = 'C:/Users/mcampi/Desktop/Postdoc_Pasteur/Perrine/data/Cosi_Labelled/result_Q1.xlsx'\n",
+    "excel_file_path = './result_Q1.xlsx'\n",
     "\n",
     "# Export the DataFrame to Excel\n",
     "result_df.to_excel(excel_file_path, index=False)"
